# evalidate

./: .gitignore  README.md  pyproject.toml  setup.py
benchmark/: benchmark.py  evalidate-vs-asteval.py
evalidate/: __init__.py  credits.txt  security.py
evalidate/cli/: genfakeproducts.py  jg.py
examples/: basic.py  products.py
tests/: test_exc.py  test_expr.py  test_feature.py  test_jailbreak.py  test_locals_globals.py  test_no_mutation.py
